--- a/var/render_config.json
+++ b/var/render_config.json
@@ -3,7 +3,7 @@
         "thickness": 1,
         "padding": 10,
         "font": {
-            "name": "Courier",
+            "name": "Arial",
             "size": 12,
             "typeface": "bold"
         },
