--- a/var/render_config.json
+++ b/var/render_config.json
@@ -20,6 +20,9 @@
             "background": "yellow"
         }
     },
+    "terminal": {
+        "padding": 0
+    },
     "nonterminal": {
         "font": {
             "name": "Times",
